--- a/menu hamburguesa/index.html
+++ b/menu hamburguesa/index.html
@@ -8,9 +8,19 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-
-
-
-    
+   <nav class="nav">
+        <div class="nav__container">
+            <label for="check" class="nav__icon">
+                <img src="menu.svg" class="nav__img" alt="menu">
+            </label>
+            <input type="checkbox" id="check" class="nav__checkbox">
+            <div class="nav__items">
+                <a href="#" class="nav__link">Inicio</a>
+                <a href="#" class="nav__link">Acerca de</a>
+                <a href="#" class="nav__link">Contacto</a>
+                <a href="#" class="nav__link">Blog</a>
+            </div>
+        </div>
+   </nav>
 </body>
 </html>
